--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#Compiled classes
+/bin/
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,7 +12,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/traces/
 
+#Eclipse Project file
 .project
+
+#Windows specific file
 .DS_Store
